fix: education - gap mobile

--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -61,6 +61,7 @@
     .Fatec, .Etec, .Objetivo {
         display: flex;
         flex-direction: column;
+        gap: 1rem;
     }
 
     .education-description h4, p{
